--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "bundlers",
+  "browserslist": "> 0.25%, not dead",
   "scripts": {
     "start": "parcel serve ./src/index.html --open",
     "build": "npm run clean && parcel build ./src/index.html --dist-dir ./out --no-source-maps",
     "clean": "rm -rf ./.parcel-cache ./dist ./out",
     "serve": "live-server ./out",
-    "deploy": "surge ./out --domain https://PUT_YOUR_SURGE_DOMAIN_HERE"
+    "deploy": "surge ./out --domain https://full-summer.surge.sh/"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@parcel/transformer-sass": "^2.0.0-beta.3.1",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.0",
+    "@parcel/transformer-sass": "^2.0.1",
+    "autoprefixer": "^10.4.0",
+    "parcel": "^2.0.1",
+    "postcss": "^8.3.11",
     "posthtml-include": "^1.7.1"
   },
   "dependencies": {
